--- a/views/addcourse.ejs
+++ b/views/addcourse.ejs
@@ -22,7 +22,7 @@
         </div>
     </header>
 
-
+<main>
     <div> Lägg till kurser</div>
 
    <!-- Kurskod, kursnamn, kursplan, kursprogression  -->
@@ -45,6 +45,7 @@
         <br>
         <input type="submit" value="Lägg till kurs">
     </form>
+</main>
     
 </body>
 </html>
