--- a/views/about.ejs
+++ b/views/about.ejs
@@ -10,7 +10,6 @@
 
     <header>
         <div>
-            <h1>Moment 1</h1>
             <nav>
                 <ul>
                     <li><a href="/">Startsida</a></li>
@@ -21,7 +20,15 @@
         </div>
     </header>
 
-    <div> Om </div>
+    <main>
+        <h2>Om</h2>
+        <p>Denna applikation skapades som en del av moment 1 i kursen DT207G. Den låter användare lagra och visa kurser i en MySQL-databas.</p>
+        <p>Program: Node.js, Express, EJS, MySQL</p>
+        <p>Databasserver: <strong>MySQL</strong></p>
+
+        <h3>Slutsatser</h3>
+        <p>Jag har lärt mig att kombinera frontend med backend och hur man hanterar databaser på en serversidan.</p>
+    </main>
     
 </body>
 </html>
