--- a/views/about.ejs
+++ b/views/about.ejs
@@ -12,8 +12,8 @@
         <div>
             <nav>
                 <ul>
-                    <li><a href="/">Startsida</a></li>
-                    <li><a href="/addcourse">Lägg till kurser</a></li>
+                    <li><a href="/">Startsida |</a></li>
+                    <li><a href="/addcourse">Lägg till kurser |</a></li>
                     <li><a href="/about" class="current">Om sidan</a></li>
                 </ul>
             </nav>
