--- a/views/addcourse.ejs
+++ b/views/addcourse.ejs
@@ -13,8 +13,8 @@
         <div>
             <nav>
                 <ul>
-                    <li><a href="/">Startsida</a></li>
-                    <li><a href="/addcourse" class="current">Lägg till kurser</a></li>
+                    <li><a href="/">Startsida |</a></li>
+                    <li><a href="/addcourse" class="current">Lägg till kurser |</a></li>
                     <li><a href="/about">Om sidan</a></li>
                 </ul>
             </nav>
@@ -22,7 +22,7 @@
     </header>
 
 <main>
-    <div> Lägg till kurser</div>
+    <h2> Lägg till kurser</h2>
 
     <% if (error.length > 0) { %>
         <ul class="error">
