--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,8 +12,8 @@
         <div>
             <nav>
                 <ul>
-                    <li><a href="/" class="current">Startsida</a></li>
-                    <li><a href="/addcourse">Lägg till kurser</a></li>
+                    <li><a href="/" class="current">Startsida |</a></li>
+                    <li><a href="/addcourse">Lägg till kurser |</a></li>
                     <li><a href="/about">Om sidan</a></li>
                 </ul>
             </nav>
