--- a/public/css/main.css
+++ b/public/css/main.css
@@ -59,6 +59,8 @@ form {
   width: 100%;
   max-width: 500px;
   font-size: 1.2rem;
+  font-weight: bold;
+  justify-content: center;
 }
 
 form input, form select {
