--- a/views/about.ejs
+++ b/views/about.ejs
@@ -22,9 +22,9 @@
 
     <main>
         <h2>Om</h2>
-        <p>Denna applikation skapades som en del av moment 1 i kursen DT207G. Den låter användare lagra och visa kurser i en MySQL-databas.</p>
-        <p>Program: Node.js, Express, EJS, MySQL</p>
-        <p>Databasserver: <strong>MySQL</strong></p>
+        <p>Denna applikation skapades som en del av moment 1 i kursen DT207G. Den låter användare lagra och visa kurser i en SQLite-databas.</p>
+        <p>Program: Node.js, Express, EJS, SQLite</p>
+        <p>Databasserver: <strong>SQLite</strong></p>
 
         <h3>Slutsatser</h3>
         <p>Jag har lärt mig att kombinera frontend med backend och hur man hanterar databaser på en serversidan.</p>
